welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^SlugHunting:11: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^